# FileFS

./: .gitignore  README.md  setup.py
bench/: README.md  render_matrix.py  run_all.py  workload.json
bench/results/: latest.json
bench/runners/c/: bench.c
bench/runners/cpp/: CMakeLists.txt  bench.cpp
bench/runners/dotnet/: FileFsBench.csproj  Program.cs
bench/runners/go/: go.mod  main.go
bench/runners/java/: Bench.java
bench/runners/kotlin/: Bench.kt
bench/runners/lua/: bench.lua
bench/runners/nodejs/: bench.mjs
bench/runners/python/: bench.py
bench/runners/rust/: Cargo.toml
bench/runners/swift/: README.md
bench/runners/wasm/: bench.mjs
bench/runners/zig/: bench.zig  build.zig
c/: FileFS.c  FileFS.h  Makefile  README.md  main.c
cpp/: CMakeLists.txt  README.md
cpp/include/filefs/: filefs.hpp
cpp/src/: block.cpp  copy.cpp  exist.cpp  fopen.cpp  fopen_helpers.cpp  journal.cpp  mkdir.cpp  mount.cpp  move.cpp  pwd.cpp  readdir.cpp  readwrite.cpp  remove.cpp  rename.cpp  rmdir.cpp  seek.cpp  txn.cpp  types.hpp  util.cpp  util.hpp
cpp/tests/: test_filefs.cpp
dotnet/: FileFS.sln  README.md
dotnet/FileFS/: DirEntry.cs  DirectoryHandle.cs  FileFsException.cs  FileHandle.cs  FileSystem.Block.cs  FileSystem.Dir.cs  FileSystem.FileOps.cs  FileSystem.IO.cs  FileSystem.Mount.cs  FileSystem.Open.cs  FileSystem.PathOps.cs  FileSystem.Txn.cs  FileSystem.cs  FileType.cs  SeekWhence.cs
dotnet/FileFS.Tests/: FileFS.Tests.csproj  FileSystemTests.cs
go/: README.md  go.mod
go/filefs/: block.go  copy.go  dir.go  exist.go  filefs_test.go  fopen.go  fopen_helpers.go  io.go  journal.go  mkdir.go  mount.go  move.go  pathops.go  pwd.go  readdir.go  readwrite.go  remove.go  rename.go  rmdir.go  seek.go  txn.go  types.go  util.go
java/: README.md  pom.xml
kotlin/: README.md  build.sh
lua/: README.md
lua/filefs/: filesystem.lua  format.lua  init.lua  types.lua
lua/tests/: run_tests.lua
moonbit/: README.mbt.md  filesystem.mbt  filesystem_test.mbt  format.mbt  moon.mod  moon.pkg  pkg.generated.mbti  types.mbt
nodejs/: README.md  package.json
nodejs/src/: directory-handle.js  file-handle.js  file-system.js  index.js  types.js  util.js
nodejs/test/: file-system.test.js
python/: README.md  pyproject.toml  setup.py
python/filefs/: __init__.py  binding.c
python/tests/: test_filefs.py
rust/: Cargo.toml  README.md
rust/src/: block.rs  copy.rs  error.rs  exist.rs  fopen.rs  fopen_helpers.rs  journal.rs  lib.rs  mkdir.rs  mount.rs  move_ops.rs  pwd.rs  readdir.rs  readwrite.rs  remove.rs  rename.rs  rmdir.rs  seek.rs  txn.rs  types.rs  util.rs
rust/tests/: integration.rs
swift/: Package.swift  README.md
swift/.build/: build.db  debug.yaml
wasm/: README.md  build.zig  build.zig.zon  package.json
wasm/js/: filefs.mjs
wasm/src/: root.zig  store.zig
wasm/test/: filefs.test.mjs
zig/: README.md  build.zig  build.zig.zon
zig/src/: block.zig  copy.zig  exist.zig  fopen.zig  fopen_helpers.zig  journal.zig  mkdir.zig  mount.zig  move.zig  pwd.zig  readdir.zig  readwrite.zig  remove.zig  rename.zig  rmdir.zig  root.zig  seek.zig  txn.zig  types.zig  util.zig
(+156 files in other folders)
