[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "filefs"
version = "0.1.0"
description = "Python bindings for FileFS (C virtual filesystem in a single file)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "cyantree" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: C",
  "Topic :: System :: Filesystems",
]

[project.urls]
Homepage = "https://github.com/fanfeilong/FileFS"

[tool.setuptools]
packages = ["filefs"]

[tool.setuptools.package-data]
filefs = ["py.typed"]
